added "blockoptions" for any backend options in the backend block.
## Just like in the frontend here:
  haproxy::frontend { 'in_rmq':
    mode            => 'tcp',
    ipaddress       => $haproxy_vip,
    ports           => '5672',
    default_backend => 'out_rmq',
    options         => {
     'option' => [ 'httpchk GET', 'tcplog', 'clitcpka' ],
     'balance' => 'leastconn',
	 'timeout client' => '3h',
	 'timeout server' => '3h'
    },
  }

### We can specify a blockoptions hash array for the backend:
  haproxy::backend { 'out_rmq':
    listening_service => 'rabbitmq',
    blockoptions         => {
       'option' => [ 'httpchk GET', 'tcplog', 'clitcpka' ],
      },
    server_names      => $backend_servernames,
    ipaddresses       => $backend_ipaddresses,
    ports             => '5672',
    options           => 'check port 15679',
  }

--- a/templates/backend.erb
+++ b/templates/backend.erb
@@ -1,5 +1,10 @@
 backend <%= name %>
   mode <%= mode %>
+  <% blockoptions.sort.each do |key, val| -%>
+  <% Array(val).each do |item| -%>
+  <%= key %>  <%= item %>
+  <% end -%>
+  <% end -%>
 <% Array(ipaddresses).zip(Array(server_names)).each do |ipaddress,host| -%>
   server <%= host %> <%= ipaddress %>:<%= Array(ports).collect {|x|x.split(',')}.flatten.join(",#{ipaddress}:") %> <%= Array(options).join(" ") %>
 <% end %>
